[project]
name = "guangning-compare"
version = "2025.8.15.2"
description = "compare current source with guangning"
readme = "README.md"
authors = [
    { name = "Maple", email = "wjxa20152015@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
guangning-compare = "guangning_compare:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""